fixed white space in mobile versions

--- a/css/style.scss
+++ b/css/style.scss
@@ -30,8 +30,7 @@ header, footer {
     background: linear-gradient(rgba(255, 255, 255, 0), $bg-color), url('../img/hero1.jpg') !important;
     height: 25vh !important;
     background-position: center center !important;
-    background-repeat: no-repeat !important;
-    background-size: 100% !important;
+    background-repeat: no-repeat !important; 
 }
 
 .own-review-bgimage {
@@ -39,6 +38,5 @@ header, footer {
     height: 25vh !important;
     background-position: 40% 35% !important;
     background-repeat: no-repeat !important;
-    background-size: 100% !important;
 }
 
